[update]: ajustes visuales de galeria

--- a/src/components/galeria/galeria.css
+++ b/src/components/galeria/galeria.css
@@ -25,3 +25,7 @@
 .botones-galeria button:hover {
     background-color: #080808;
 }
+
+.botones-galeria button:focus {
+    background-color: #080808;
+}
