--- a/src/components/allfotos/allfotos.css
+++ b/src/components/allfotos/allfotos.css
@@ -1,4 +1,16 @@
-img {
-    width: 300px;
-    height: auto;
+.vertical {
+    max-width: 300px;
+    max-height: 100%;
+}
+
+.horizontal {
+    max-width: 100%;
+    max-height: 300px;
+}
+
+.content-all-fotos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
