--- a/src/components/fotos/fotos.css
+++ b/src/components/fotos/fotos.css
@@ -13,19 +13,26 @@
     justify-content: center;
 }
 
-.botones-galeria button {
+.color-boton-estandar {
     background-color: #4e4e4e;
     padding: 20px;
     margin: 0px 10px;
     border: none;
     color: white;
     font-size: 17px;
+    cursor: pointer;
 }
 
-.botones-galeria button:hover {
+.color-boton-estandar:hover {
     background-color: #080808;
 }
 
-.botones-galeria button:focus {
+.boton-target {
     background-color: #080808;
+    padding: 20px;
+    margin: 0px 10px;
+    border: none;
+    color: white;
+    font-size: 17px;
+    cursor: pointer;
 }
