[update]: se estipulo la distribucion de las fotos en la sección todas las fotos y e agrego una animacion mientras cargan las fotos

--- a/src/components/allfotos/allfotos.css
+++ b/src/components/allfotos/allfotos.css
@@ -1,6 +1,7 @@
 .content-all-fotos {
+    margin: 50px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
