--- a/src/components/foto/foto.css
+++ b/src/components/foto/foto.css
@@ -1,11 +1,45 @@
-.vertical {
-    max-width: 300px;
-    max-height: 100%;
-    margin: 2px;
+.horizontal {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    margin: 5px;
+    border-radius: 4px;
 }
 
-.horizontal {
-    max-width: 100%;
-    max-height: 300px;
-    margin: 2px;
+.vertical {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    margin: 5px;
+    border-radius: 4px;
+}
+
+.img_loading_v {
+    width: 300px;
+    height: 450px;
+    background-color: #858383;
+    border-radius: 4px;
+    margin: 5px;
+    animation: 2s spin infinite linear;
+}
+
+@keyframes spin {
+    50% {
+        background-color: #cac8c8;
+    }
+}
+
+.img_loading_h {
+    width: 450px;
+    height: 300px;
+    background-color: #858383;
+    border-radius: 4px;
+    margin: 5px;
+    animation: 2s spin2 infinite linear;
+}
+
+@keyframes spin2 {
+    50% {
+        background-color: #cac8c8;
+    }
 }
