--- a/src/components/allfotos/allfotos.css
+++ b/src/components/allfotos/allfotos.css
@@ -2,6 +2,6 @@
     margin: 50px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
