--- a/src/components/foto/foto.css
+++ b/src/components/foto/foto.css
@@ -4,6 +4,7 @@
     height: auto;
     margin: 5px;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .vertical {
@@ -12,6 +13,7 @@
     height: auto;
     margin: 5px;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .img_loading_v {
